Add linting with ruff (#2197)
Adds linting and formatting with [Ruff](https://docs.astral.sh/ruff).

This caught a couple of undefined variables, but it also enforces
consistent code styling across our code examples. You may find it easier
to review this PR commit-wise.

--- a/docs/guides/q-ctrl-optimization-solver.ipynb
+++ b/docs/guides/q-ctrl-optimization-solver.ipynb
@@ -377,9 +377,8 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
     "import networkx as nx\n",
-    "from sympy import symbols, Poly\n",
+    "from sympy import symbols, Poly, srepr\n",
     "\n",
     "# To change the weights, change the seed to any integer.\n",
     "rng_seed = 18\n",
@@ -470,7 +469,7 @@
    "source": [
     "# Solve the problem\n",
     "mvc_job = solver.run(\n",
-    "    problem=sympy.srepr(cost_function), instance=hub + \"/\" + group + \"/\" + project\n",
+    "    problem=srepr(cost_function), instance=hub + \"/\" + group + \"/\" + project\n",
     ")"
    ]
   },
