--- a/docs/guides/custom-backend.ipynb
+++ b/docs/guides/custom-backend.ipynb
@@ -77,9 +77,9 @@
     "from qiskit.providers import BackendV2, Options\n",
     "from qiskit.transpiler import Target, InstructionProperties\n",
     "from qiskit.circuit.library import XGate, SXGate, RZGate, CZGate, ECRGate\n",
-    "from qiskit.circuit import Measure, Delay, Parameter, IfElseOp, Reset\n",
+    "from qiskit.circuit import Measure, Delay, Parameter, Reset\n",
     "from qiskit import QuantumCircuit, transpile\n",
-    "from qiskit.visualization import plot_gate_map, plot_coupling_map\n",
+    "from qiskit.visualization import plot_gate_map\n",
     "\n",
     "\n",
     "\n",
@@ -344,7 +344,6 @@
    ],
    "source": [
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
-    "from qiskit import QuantumCircuit\n",
     "\n",
     "num_qubits = 50\n",
     "ghz = QuantumCircuit(num_qubits)\n",
@@ -458,7 +457,6 @@
     "        self._target.add_instruction(Delay(Parameter(\"t\")), delay_props)\n",
     "        cz_props = {}\n",
     "        for edge in graph.edge_list():\n",
-    "            offset = i * len(graph)\n",
     "            cz_props[edge] = InstructionProperties(\n",
     "                error=rng.uniform(7e-4, 5e-3), duration=rng.uniform(1e-8, 9e-7)\n",
     "            )\n",
@@ -529,7 +527,7 @@
     "full_device_bv.h(range(num_qubits))\n",
     "full_device_bv.cx(range(num_qubits - 1), num_qubits - 1)\n",
     "full_device_bv.h(range(num_qubits))\n",
-    "full_device_bv.measure(range(num_qubits - 1), range(num_qubits - 1));\n",
+    "full_device_bv.measure(range(num_qubits - 1), range(num_qubits - 1))\n",
     "tqc = transpile(full_device_bv, backend, optimization_level=3)\n",
     "op_counts = tqc.count_ops()\n",
     "print(f\"CZ gates: {op_counts['cz']}\")\n",
