Update Sampler import

--- a/docs/guides/run-jobs-session.mdx
+++ b/docs/guides/run-jobs-session.mdx
@@ -21,7 +21,7 @@ The way sessions are started within Qiskit Runtime has changed. **By 1 April 202
 Before starting a session, you must [set up Qiskit Runtime](./install-qiskit) and initialize it as a service:
 
 ``` python
-from qiskit_ibm_runtime import QiskitRuntimeService, Session, Sampler, Estimator
+from qiskit_ibm_runtime import QiskitRuntimeService, Session, SamplerV2 as Sampler, EstimatorV2 as Estimator
 
 service = QiskitRuntimeService()
 ```
