--- a/docs/guides/get-started-with-primitives.ipynb
+++ b/docs/guides/get-started-with-primitives.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "14079bff-5acd-4e9a-8c52-73d32c91bed0",
    "metadata": {},
    "source": [
     "# Get started with primitives\n",
@@ -15,6 +16,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d30f2d12-a722-443e-a5c4-2d6b689ab7f5",
    "metadata": {},
    "source": [
     "<span id=\"start-estimator\"></span>\n",
@@ -32,6 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "2a542fe3-e233-4b54-821d-e12830a76b03",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -48,7 +51,7 @@
    ],
    "source": [
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
-    " \n",
+    "\n",
     "service = QiskitRuntimeService()\n",
     "backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)\n",
     "\n",
@@ -57,6 +60,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "61ce8a47-0554-47fc-b594-5d5836130022",
    "metadata": {},
    "source": [
     "### 2. Create a circuit and an observable\n",
@@ -67,6 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "19fd16fe-0744-4fa0-b4dc-837b1e52c4f0",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +102,7 @@
     "\n",
     "entanglement = [tuple(edge) for edge in backend.coupling_map.get_edges()]\n",
     "observable = SparsePauliOp.from_sparse_list(\n",
-    "    [(\"ZZ\", [i, j], 0.5) for i, j in entanglement], \n",
+    "    [(\"ZZ\", [i, j], 0.5) for i, j in entanglement],\n",
     "    num_qubits=backend.num_qubits\n",
     ")\n",
     "circuit = QAOAAnsatz(observable, reps=2)\n",
@@ -109,6 +114,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "74322f47-61a0-4efc-a7c5-f8d4a9c18fb6",
    "metadata": {},
    "source": [
     "The circuit and observable need to be transformed to only use instructions supported by the QPU (referred to as *instruction set architecture (ISA)* circuits). We'll use the transpiler to do this."
@@ -117,6 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "b8635a25-bd1c-40f4-aabb-a91730e399e2",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -142,6 +149,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c5d28704-4a41-4ac0-8769-39fb43da837f",
    "metadata": {},
    "source": [
     "### 3. Initialize Qiskit Runtime Estimator\n",
@@ -152,6 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "bf57cca3-1ae9-410c-a75c-8cc7e248c1bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,6 +171,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ab9bc5bc-d553-403f-9128-3c83a13f3c5b",
    "metadata": {},
    "source": [
     "### 4. Invoke the Estimator and get results\n",
@@ -172,6 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "dc280093-30b8-4efd-a159-138af1242004",
    "metadata": {},
    "outputs": [
     {
@@ -192,6 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "612be948-7a11-4169-a325-2f09948adc44",
    "metadata": {},
    "outputs": [
     {
@@ -210,19 +222,12 @@
     "print(f\"  > Expectation value: {result[0].data.evs}\")\n",
     "print(f\"  > Metadata: {result[0].metadata}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "description": "How to use the Estimator and Sampler primitives in Qiskit Runtime.",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -236,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3"
   },
   "title": "Get started with primitives"
  },
