--- a/docs/guides/get-started-with-primitives.ipynb
+++ b/docs/guides/get-started-with-primitives.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "8a3313d3-c8f5-494d-9fc1-4159796d4335",
    "metadata": {},
    "source": [
     "# Get started with primitives\n",
@@ -15,6 +16,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "df6e2c9a-daa8-4d40-85cf-3afdffd597b1",
    "metadata": {},
    "source": [
     "<span id=\"start-estimator\"></span>\n",
@@ -32,6 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "dbd3ecf7-8d27-444c-a74c-e83da6cd2718",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -48,7 +51,7 @@
    ],
    "source": [
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
-    " \n",
+    "\n",
     "service = QiskitRuntimeService()\n",
     "backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)\n",
     "\n",
@@ -57,6 +60,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d645615e-bf76-48c6-a3f2-e1327330c4cb",
    "metadata": {},
    "source": [
     "### 2. Create a circuit and an observable\n",
@@ -67,6 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "4e36a987-6737-409e-bafa-c6ba4b10119a",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +102,7 @@
     "\n",
     "entanglement = [tuple(edge) for edge in backend.coupling_map.get_edges()]\n",
     "observable = SparsePauliOp.from_sparse_list(\n",
-    "    [(\"ZZ\", [i, j], 0.5) for i, j in entanglement], \n",
+    "    [(\"ZZ\", [i, j], 0.5) for i, j in entanglement],\n",
     "    num_qubits=backend.num_qubits\n",
     ")\n",
     "circuit = QAOAAnsatz(observable, reps=2)\n",
@@ -109,6 +114,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "52f932e6-9774-4847-a7c2-51d5eba5e8b9",
    "metadata": {},
    "source": [
     "The circuit and observable need to be transformed to only use instructions supported by the QPU (referred to as *instruction set architecture (ISA)* circuits). We'll use the transpiler to do this."
@@ -117,6 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "dc9e53b9-ee88-4e8e-a562-3d18ad1fdddc",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -142,6 +149,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "99090992-bc33-4f4c-9b7e-f24e430dda7c",
    "metadata": {},
    "source": [
     "### 3. Initialize Qiskit Runtime Estimator\n",
@@ -152,6 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "fb2a2241-b2ce-4635-ae64-450f87aba66f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,6 +171,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "84be9ea0-ff02-4c93-84e6-f135ab5d01d0",
    "metadata": {},
    "source": [
     "### 4. Invoke the Estimator and get results\n",
@@ -172,6 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "cd4aec24-2b30-40cb-9e19-558c96204b9b",
    "metadata": {},
    "outputs": [
     {
@@ -192,6 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "87eb1b90-13d2-4a08-a825-b1650ef60572",
    "metadata": {},
    "outputs": [
     {
@@ -213,6 +225,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "145ed101-4a62-4d9c-8fdc-f81e60395ccb",
    "metadata": {},
    "source": [
     "<span id=\"start-sampler\"></span>\n",
@@ -228,6 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "b787ef29-3d08-46c6-8e10-4906202e8964",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,6 +253,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f12847fa-43eb-4a83-8711-0b4b737b76ae",
    "metadata": {},
    "source": [
     "### 2. Create a circuit\n",
@@ -249,12 +264,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "08561f08-9767-4611-9d29-fae2911dc6fa",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from qiskit.circuit.library import EfficientSU2\n",
-    " \n",
+    "\n",
     "circuit = EfficientSU2(127, entanglement='linear', flatten=True)\n",
     "circuit.measure_all()\n",
     "# the circuit is parametrized, so we will define the parameter values for execution\n",
@@ -263,14 +279,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eaf9bb06-f53c-4482-8c52-523fe9f2ff88",
    "metadata": {},
    "source": [
-    "Use the transpiler to get an ISA circuit.\n"
+    "Use the transpiler to get an ISA circuit."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "88512fb3-bb55-46a0-b954-a5da67277d3f",
    "metadata": {},
    "outputs": [
     {
@@ -291,6 +309,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "de82cee0-ddb0-4b09-a407-fe76e7fb1534",
    "metadata": {},
    "source": [
     "### 3. Initialize the Qiskit Runtime Sampler\n",
@@ -301,16 +320,18 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "5c25ef75-2436-40de-a1e8-54170199f91a",
    "metadata": {},
    "outputs": [],
    "source": [
     "from qiskit_ibm_runtime import SamplerV2 as Sampler\n",
-    " \n",
+    "\n",
     "sampler = Sampler(mode=backend)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "6c17e68f-9566-4770-9049-2f89bb7bac16",
    "metadata": {},
    "source": [
     "### 4. Invoke the Sampler and get results\n",
@@ -321,6 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "a89b3bbb-2c53-490e-ad9e-ede2918c779f",
    "metadata": {},
    "outputs": [
     {
@@ -341,6 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "a3516d62-2cb2-4763-8bde-7d05a01dc1a9",
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +376,7 @@
    ],
    "source": [
     "result = job.result()\n",
-    " \n",
+    "\n",
     "# Get results for the first (and only) PUB\n",
     "pub_result = result[0]\n",
     "print(f\"Counts for the 'meas' output register: {pub_result.data.meas.get_counts()}\")"
@@ -361,6 +384,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4b078dd6-4ffd-4fb0-8e8c-c69f48d0b673",
    "metadata": {},
    "source": [
     "<span id=\"backend\"></span>\n",
@@ -377,6 +401,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b5309fd1-1b72-4cff-af4c-63287e539611",
    "metadata": {},
    "source": [
     "### Example: BackendEstimator\n",
@@ -404,6 +429,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1cd6f101-8c3d-4d6d-83f4-712ae1f148f6",
    "metadata": {},
    "source": [
     "### Similarities and differences between backend and Runtime primitives\n",
@@ -422,6 +448,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "478bf08c-0a2e-4bc4-8f25-121fd2280a94",
    "metadata": {},
    "source": [
     "## Next steps\n",
@@ -437,19 +464,12 @@
     "    - Read [Migrate to V2 primitives](/migration-guides/v2-primitives).\n",
     "</Admonition>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "description": "How to use the Estimator and Sampler primitives in Qiskit Runtime.",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -463,7 +483,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3"
   },
   "title": "Get started with primitives"
  },
