--- a/docs/api/qiskit/release-notes/1.2.mdx
+++ b/docs/api/qiskit/release-notes/1.2.mdx
@@ -368,7 +368,7 @@ The Qiskit 1.2.0 release focuses mainly on improving performance and quality of 
 
 *   The user configuration file has a new option `circuit_idle_wires`, which takes a Boolean value. This allows users to set their preferred default behavior of the `idle_wires` option of the circuit drawers [`QuantumCircuit.draw()`](/api/qiskit/qiskit.circuit.QuantumCircuit#draw "qiskit.circuit.QuantumCircuit.draw") and [`circuit_drawer()`](/api/qiskit/qiskit.visualization.circuit_drawer "qiskit.visualization.circuit_drawer"). For example, adding a section to `~/.qiskit/settings.conf` with:
 
-    ```python
+    ```text
     [default]
     circuit_idle_wires = false
     ```
