--- a/docs/api/qiskit/visualization.mdx
+++ b/docs/api/qiskit/visualization.mdx
@@ -20,7 +20,7 @@ The visualization module contain functions that visualizes measurement outcome c
 
 To use visualization functions, you are required to install visualization optionals to your development environment:
 
-```python
+```bash
 pip install 'qiskit[visualization]'
 ```
 
