--- a/docs/api/qiskit/qiskit.providers.fake_provider.Fake27QPulseV1.mdx
+++ b/docs/api/qiskit/qiskit.providers.fake_provider.Fake27QPulseV1.mdx
@@ -17,7 +17,7 @@ python_api_name: qiskit.providers.fake_provider.Fake27QPulseV1
 
   *   coupling\_map:
 
-      > ```python
+      > ```text
       >                06                  17
       >                ↕                    ↕
       > 00 ↔ 01 ↔ 04 ↔ 07 ↔ 10 ↔ 12 ↔ 15 ↔ 18 ↔ 20 ↔ 23
