--- a/docs/api/qiskit/qiskit.providers.fake_provider.Fake7QPulseV1.mdx
+++ b/docs/api/qiskit/qiskit.providers.fake_provider.Fake7QPulseV1.mdx
@@ -17,7 +17,7 @@ python_api_name: qiskit.providers.fake_provider.Fake7QPulseV1
 
   *   coupling\_map:
 
-      > ```python
+      > ```text
       > 0 ↔ 1 ↔ 3 ↔ 5 ↔ 6
       >     ↕       ↕
       >     2       4
