--- a/docs/guides/plot-quantum-states.ipynb
+++ b/docs/guides/plot-quantum-states.ipynb
@@ -469,6 +469,16 @@
     "  - Read the [contributing guidelines](https://github.com/Qiskit/qiskit/blob/main/CONTRIBUTING.md) if you want to contribute to the open-source Qiskit SDK.\n",
     "</Admonition>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa428131-c6fd-47cf-a2ac-9dcebe93b799",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
   }
  ],
  "metadata": {
