Change copy and move cell

--- a/docs/guides/plot-quantum-states.ipynb
+++ b/docs/guides/plot-quantum-states.ipynb
@@ -459,6 +459,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "aa428131-c6fd-47cf-a2ac-9dcebe93b799",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": [
+    "## Package information\n",
+    "\n",
+    "The code on this page was developed using the following package versions.\n",
+    "\n",
+    "```\n",
+    "qiskit[all]~=1.2.4\n",
+    "qiskit-aer~=0.15.1\n",
+    "qiskit-ibm-runtime~=0.31.0\n",
+    "qiskit-serverless~=0.17.1\n",
+    "qiskit-ibm-catalog~=0.1\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d448035a-dfa0-42dc-bef8-aaf5742d818d",
    "metadata": {},
    "source": [
@@ -468,28 +490,6 @@
     "  - Need to refresh your quantum information knowledge? Check out the [Basics of quantum information](https://learning.quantum.ibm.com/course/basics-of-quantum-information) course on IBM Quantum Learning.\n",
     "  - Read the [contributing guidelines](https://github.com/Qiskit/qiskit/blob/main/CONTRIBUTING.md) if you want to contribute to the open-source Qiskit SDK.\n",
     "</Admonition>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "aa428131-c6fd-47cf-a2ac-9dcebe93b799",
-   "metadata": {
-    "tags": [
-     "version-info"
-    ]
-   },
-   "source": [
-    "### Version information\n",
-    "\n",
-    "The code on this page was run using the following package versions.\n",
-    "\n",
-    "```\n",
-    "qiskit[all]~=1.2.4\n",
-    "qiskit-aer~=0.15.1\n",
-    "qiskit-ibm-runtime~=0.31.0\n",
-    "qiskit-serverless~=0.17.1\n",
-    "qiskit-ibm-catalog~=0.1\n",
-    "```"
    ]
   }
  ],
