Change appearance and move

--- a/docs/guides/plot-quantum-states.ipynb
+++ b/docs/guides/plot-quantum-states.ipynb
@@ -37,6 +37,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aa428131-c6fd-47cf-a2ac-9dcebe93b799",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": [
+    "<details>\n",
+    "<summary>Package version information</summary>\n",
+    "\n",
+    "The code on this page was last executed using the following requirements.\n",
+    "\n",
+    "```\n",
+    "qiskit[all]~=1.2.4\n",
+    "qiskit-aer~=0.15.1\n",
+    "qiskit-ibm-runtime~=0.31.0\n",
+    "qiskit-serverless~=0.17.1\n",
+    "qiskit-ibm-catalog~=0.1\n",
+    "```\n",
+    "</details>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "da6c51a7-813b-4fb0-bff0-bfc2010f9c49",
@@ -455,28 +479,6 @@
     "    \"# Plot a qsphere of psi with title 'Psi'\"\n",
     "  ]}\n",
     "/>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "aa428131-c6fd-47cf-a2ac-9dcebe93b799",
-   "metadata": {
-    "tags": [
-     "version-info"
-    ]
-   },
-   "source": [
-    "## Package information\n",
-    "\n",
-    "The code on this page was developed using the following package versions.\n",
-    "\n",
-    "```\n",
-    "qiskit[all]~=1.2.4\n",
-    "qiskit-aer~=0.15.1\n",
-    "qiskit-ibm-runtime~=0.31.0\n",
-    "qiskit-serverless~=0.17.1\n",
-    "qiskit-ibm-catalog~=0.1\n",
-    "```"
    ]
   },
   {
