--- a/docs/guides/plot-quantum-states.ipynb
+++ b/docs/guides/plot-quantum-states.ipynb
@@ -46,9 +46,10 @@
    },
    "source": [
     "<details>\n",
-    "<summary>Package version information</summary>\n",
+    "<summary>Package versions</summary>\n",
     "\n",
-    "The code on this page was last executed using the following requirements.\n",
+    "The code on this page was developed using the following requirements.\n",
+    "We recommend using these versions or newer.\n",
     "\n",
     "```\n",
     "qiskit[all]~=1.2.4\n",
