Apply suggestions from code review
Co-authored-by: Abby Mitchell <23662430+javabster@users.noreply.github.com>

--- a/docs/guides/qiskit-addons-sqd.mdx
+++ b/docs/guides/qiskit-addons-sqd.mdx
@@ -41,7 +41,7 @@ pip install tox notebook -e '.[notebook-dependencies, dev]'
 
 ## Theoretical background
 
-The SQD workflow using self-consistent configuration recovery is explained in detail in [[1]](#references). This page will briefly overview the technique depicted in the following diagram.
+The SQD workflow using self-consistent configuration recovery is explained in detail in [[1]](#references). This section will briefly overview the technique depicted in the following diagram.
 
 ![SQD diagram depicting configuration recovery, collecting subsamples, and obtaining eigenstates from those subsamples](/images/guides/qiskit-addons/sqd_diagram.png)
 
