Add version info cell to many notebooks
Note I did not add this to some functions notebooks.

--- a/docs/guides/construct-circuits.ipynb
+++ b/docs/guides/construct-circuits.ipynb
@@ -10,6 +10,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e11dd8ad-7edc-4cf8-bc13-388fe04e84fa",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "c50d8e43-ae82-4e41-8d17-a37332d1bf6d",
    "metadata": {},
    "source": [
