--- a/docs/guides/custom-backend.ipynb
+++ b/docs/guides/custom-backend.ipynb
@@ -21,8 +21,24 @@
    "id": "9429c31d-84b1-4547-9227-0b2fcf8a0193",
    "metadata": {},
    "source": [
-    "# Transpile against custom backends\n",
-    "\n",
+    "# Transpile against custom backends"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27349ef1-5e25-4762-8a6f-8b4c265763c9",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "678c28a1-d1ee-4179-8c7a-be5698e045bb",
+   "metadata": {},
+   "source": [
     "{/* cspell:ignore LOCC */}\n",
     "\n",
     "One of the more powerful features of Qiskit is the ability to support unique device configurations.  Qiskit is built to be agnostic to the provider of the quantum hardware you use, and providers can configure the `BackendV2` object to their own unique device properties.  This topic demonstrates how to configure your own backend and transpile quantum circuits against them.\n",
