--- a/docs/guides/custom-transpiler-pass.ipynb
+++ b/docs/guides/custom-transpiler-pass.ipynb
@@ -5,8 +5,24 @@
    "id": "710d86a8-3243-4133-b7bc-093306598512",
    "metadata": {},
    "source": [
-    "# Write a custom transpiler pass\n",
-    "\n",
+    "# Write a custom transpiler pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a66bd4b-56b1-4f33-b1bf-b43dbc7c03a7",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32806873-3c88-48fc-94ad-9d20e0f378f8",
+   "metadata": {},
+   "source": [
     "The Qiskit SDK lets you create custom transpilation passes and run them in the `PassManager` object or add them to a `StagedPassManager`. Here we will demonstrate how to write a  transpiler pass, focusing on building a pass that performs [Pauli twirling](https://arxiv.org/abs/quant-ph/0606161) on the noisy quantum gates in a quantum circuit. This example uses the DAG, which is the object manipulated by the `TransformationPass` type of pass."
    ]
   },
