--- a/docs/guides/dynamic-circuits-considerations.ipynb
+++ b/docs/guides/dynamic-circuits-considerations.ipynb
@@ -5,8 +5,24 @@
    "id": "ad8a25cb-326a-4e5e-9e04-6ab1f02a2bc3",
    "metadata": {},
    "source": [
-    "# Hardware considerations and limitations for classical feedforward and control flow\n",
-    "\n",
+    "# Hardware considerations and limitations for classical feedforward and control flow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8515bf71-f79c-47f6-a5ef-5314361bf80b",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3d504a0-ce8a-4bfb-aa0a-304c3360e81f",
+   "metadata": {},
+   "source": [
     "[Classical feedforward and control flow](./classical-feedforward-and-control-flow) shows how to use Qiskit to build circuits that involve classical feedforward and control flow, also known as dynamic circuits. When actually running such circuits on quantum hardware, there are several considerations and limitations to be aware of. Many of these limitations exist because the underlying technology supporting these features is in an early stage of development, and we hope to be able to address them in the future.\n",
     "\n",
     "\n",
