--- a/docs/guides/get-qpu-information.ipynb
+++ b/docs/guides/get-qpu-information.ipynb
@@ -5,8 +5,24 @@
    "id": "cb8aed01-2218-4524-b769-94e3f481b25f",
    "metadata": {},
    "source": [
-    "# Get backend information with Qiskit\n",
-    "\n",
+    "# Get backend information with Qiskit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3eccac60-3e0f-4f55-ad2d-f19620105ad3",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb232c67-5b12-4125-b786-aca54bd734c2",
+   "metadata": {},
+   "source": [
     "This page explains how to use Qiskit to find information about your available backends."
    ]
   },
