--- a/docs/guides/hello-world.ipynb
+++ b/docs/guides/hello-world.ipynb
@@ -5,8 +5,24 @@
    "id": "552b1077",
    "metadata": {},
    "source": [
-    "# Hello world\n",
-    "\n",
+    "# Hello world"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7cc19a86-a234-4220-bb4f-d66d3834e0c3",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a3c196d-545d-417f-b34e-fa422aa9a394",
+   "metadata": {},
+   "source": [
     "This example contains two parts. You will first create a simple quantum program and run it on a quantum processing unit (QPU).  Because actual quantum research requires much more robust programs, in the second section ([Scale to large numbers of qubits](#scale-to-large-numbers-of-qubits)), you will scale the simple program up to utility level.  You can also follow along with the Hello World episode of the Coding with Qiskit 1.0 video series.\n",
     "\n",
     "<ImageLink\n",
