--- a/docs/guides/set-optimization.ipynb
+++ b/docs/guides/set-optimization.ipynb
@@ -5,8 +5,24 @@
    "id": "6f5a4641-5b7f-4841-8bec-60fa44429030",
    "metadata": {},
    "source": [
-    "# Set transpiler optimization level\n",
-    "\n",
+    "# Set transpiler optimization level"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a1db79c-9bee-4737-b8b5-13155062ca04",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd9eb973-430c-4450-8de2-c061aa0ff742",
+   "metadata": {},
+   "source": [
     "Real quantum devices are subject to noise and gate errors, so optimizing the circuits to reduce their depth and gate count can significantly improve the results obtained from executing those circuits.\n",
     "The [`generate_preset_pass_manager`](/api/qiskit/transpiler_preset#qiskit.transpiler.preset_passmanagers.generate_preset_pass_manager) function has one required positional argument, `optimization_level`, that controls how much effort the transpiler spends on optimizing circuits. This argument can be an integer taking one of the values 0, 1, 2, or 3.\n",
     "Higher optimization levels generate more optimized circuits at the expense of longer compile times.\n",
