--- a/docs/guides/simulate-stabilizer-circuits.ipynb
+++ b/docs/guides/simulate-stabilizer-circuits.ipynb
@@ -5,8 +5,24 @@
    "id": "e6d26387-f218-4f62-80c4-792103129b99",
    "metadata": {},
    "source": [
-    "# Efficient simulation of stabilizer circuits with Qiskit Aer primitives\n",
-    "\n",
+    "# Efficient simulation of stabilizer circuits with Qiskit Aer primitives"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1bcbbdb-965d-41f0-88dd-bb42834b35b9",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "386709ed-183b-4759-bb1b-56cdedf80539",
+   "metadata": {},
+   "source": [
     "This page shows how to use Qiskit Aer primitives to efficiently simulate stabilizer circuits, including those subject to Pauli noise.\n",
     "\n",
     "Stabilizer circuits, also known as Clifford circuits, are an important restricted class of quantum circuits that can be efficiently simulated classically. There are several equivalent ways to define stabilizer circuits. One definition is that a stabilizer circuit is a quantum circuit that consists solely of the following gates:\n",
