--- a/docs/guides/transpile-with-pass-managers.ipynb
+++ b/docs/guides/transpile-with-pass-managers.ipynb
@@ -5,8 +5,24 @@
    "id": "7dd44f6d-44f7-4613-bf3c-65a1fb7d100b",
    "metadata": {},
    "source": [
-    "# Transpile with pass managers\n",
-    "\n",
+    "# Transpile with pass managers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fcd3656-40ad-4f84-b83e-9e6506dff50e",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f4f67e5-efba-45e4-ab42-073f99043c3c",
+   "metadata": {},
+   "source": [
     "The recommended way to transpile a circuit is to create a staged pass manager and then execute its `run` method with the circuit as input. This page explains how to transpile quantum circuits this way."
    ]
   },
