--- a/docs/guides/transpiler-stages.ipynb
+++ b/docs/guides/transpiler-stages.ipynb
@@ -5,8 +5,24 @@
    "id": "f2f7c189-f44e-41f8-a854-105b3bc49397",
    "metadata": {},
    "source": [
-    "# Transpiler stages\n",
-    "\n",
+    "# Transpiler stages"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad073954-5ac3-4291-bbef-5ae4b9db1da9",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7ea0c93-e691-4130-b614-187346a9e149",
+   "metadata": {},
+   "source": [
     "This page describes the stages of prebuilt transpilation pipeline in the Qiskit SDK. There are six stages:\n",
     "\n",
     "1. `init`\n",
