--- a/docs/guides/visualize-circuits.ipynb
+++ b/docs/guides/visualize-circuits.ipynb
@@ -10,6 +10,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7ea76afb-aecf-4ea2-b173-5d5e7e7d68ec",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "bd5865b3-adfa-4c87-be55-51f693335184",
    "metadata": {},
    "source": [
