--- a/docs/guides/dynamical-decoupling-pass-manager.ipynb
+++ b/docs/guides/dynamical-decoupling-pass-manager.ipynb
@@ -5,8 +5,24 @@
    "id": "e8de8e81-3fc5-4d06-addf-3eebab23de68",
    "metadata": {},
    "source": [
-    "# Create a pass manager for dynamical decoupling\n",
-    "\n",
+    "# Create a pass manager for dynamical decoupling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac05cea1-fc14-4ef3-bdc2-a2faf7b6bc4a",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d47fe79d-30f0-48ef-bfd2-4167fa7570b0",
+   "metadata": {},
+   "source": [
     "This page demonstrates how to use the [`PadDynamicalDecoupling`](/api/qiskit/qiskit.transpiler.passes.PadDynamicalDecoupling) pass to add an error suppression technique called _dynamical decoupling_ to the circuit.\n",
     "\n",
     "Dynamical decoupling works by adding pulse sequences (known as _dynamical decoupling sequences_) to idle qubits to flip them around the Bloch sphere, which cancels the effect of noise channels, thereby suppressing decoherence. These pulse sequences are similar to refocusing pulses used in nuclear magnetic resonance. For a full description, see [A Quantum Engineer's Guide to Superconducting Qubits](https://arxiv.org/abs/1904.06560).\n",
