--- a/docs/guides/error-mitigation-and-suppression-techniques.ipynb
+++ b/docs/guides/error-mitigation-and-suppression-techniques.ipynb
@@ -3,14 +3,26 @@
   {
    "cell_type": "markdown",
    "id": "b1267e87-e0b3-4934-b4b8-0265fe84adfd",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "source": [
-    "# Error mitigation and suppression techniques\n",
-    "\n",
+    "# Error mitigation and suppression techniques"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fb66fc9-c519-4904-a6a1-33adc3f8df13",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "076872c0-f8de-4aef-ae13-29078ee8564e",
+   "metadata": {},
+   "source": [
     "This page provides high-level explanations of the error suppression and error mitigation techniques available through Qiskit Runtime.\n",
     "\n",
     "The following cell imports the Estimator primitive and creates a backend that will be used for initializing the Estimator in later code cells."
@@ -33,11 +45,7 @@
   {
    "cell_type": "markdown",
    "id": "ad548ef5-f1c1-4def-b551-b3ece2032065",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Dynamical decoupling\n",
     "\n",
