--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -5,8 +5,24 @@
    "id": "a47ac9aa-4bb9-4240-806e-9beabfd2dda2",
    "metadata": {},
    "source": [
-    "# Introduction to Qiskit Functions\n",
-    "\n",
+    "# Introduction to Qiskit Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0be0fe02-bc50-45a6-aaf6-2120dac862c2",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "098d8fd4-1558-40df-a1b1-ad70fdef8863",
+   "metadata": {},
+   "source": [
     "<Admonition type=\"note\">\n",
     "Qiskit Functions are an experimental feature available only to IBM Quantum&trade; Premium Plan users. They are in preview release status and subject to change.\n",
     "</Admonition>\n",
