--- a/docs/guides/noise-learning.ipynb
+++ b/docs/guides/noise-learning.ipynb
@@ -5,8 +5,24 @@
    "id": "1b2370f0-a4ee-49b1-9e53-e4527d37bc6f",
    "metadata": {},
    "source": [
-    "# Noise learning helper\n",
-    "\n",
+    "# Noise learning helper"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5e65fb2-8556-4477-81a5-9b6bf551ca7e",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cabee439-d0f2-4079-a47d-b6d96ce78332",
+   "metadata": {},
+   "source": [
     "The error mitigation techniques [PEA](./error-mitigation-and-suppression-techniques#probabilistic-error-amplification-pea) and [PEC](./error-mitigation-and-suppression-techniques#probabilistic-error-cancellation-pec) both utilize a noise learning component based on a [Pauli-Lindblad noise model](https://arxiv.org/abs/2201.09866), which is typically managed during execution after submitting one or more jobs through `qiskit-ibm-runtime` without any local access to the fitted noise model. However, as of `qiskit-ibm-runtime` 0.27.1, a [`NoiseLearner`](../api/qiskit-ibm-runtime/noise_learner) and associated  [`NoiseLearnerOptions`](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.NoiseLearnerOptions) class have been created to obtain the results of these noise learning experiments. These results can then be stored locally as a `NoiseLearnerResult` and used as input in later experiments. This page provides an overview of its usage and the associated options available.\n",
     "\n",
     "\n",
