--- a/docs/guides/operators-overview.ipynb
+++ b/docs/guides/operators-overview.ipynb
@@ -1,14 +1,28 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "434beca8-b15d-4f42-a887-4636fb692789",
    "metadata": {},
    "source": [
-    "# Overview of operator classes\n",
-    "\n",
-    "\n",
+    "# Overview of operator classes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "434beca86fbddfbe-75b2-44d7-8783-b756382fd6d5",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c4cfc09-242c-4389-b03e-8c241c573306",
+   "metadata": {},
+   "source": [
     "In Qiskit, quantum operators are represented using classes from the [`quantum_info`](/api/qiskit/quantum_info) module. The most important operator class is [`SparsePauliOp`](/api/qiskit/qiskit.quantum_info.SparsePauliOp), which represents a general quantum operator as a linear combination of Pauli strings. `SparsePauliOp` is the class most commonly used to represent quantum observables. The rest of this page explains how to use `SparsePauliOp` and other operator classes."
    ]
   },
