--- a/docs/guides/primitive-input-output.ipynb
+++ b/docs/guides/primitive-input-output.ipynb
@@ -5,8 +5,24 @@
    "id": "e8a8a4b1-2ed2-4b82-8d02-98174a6da903",
    "metadata": {},
    "source": [
-    "# Primitive inputs and outputs\n",
-    "\n",
+    "# Primitive inputs and outputs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2494c928-0821-4d9d-ae52-b69940071632",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09501afd-ae49-4274-bf4c-512a1187201a",
+   "metadata": {},
+   "source": [
     "This page gives an overview of the inputs and outputs of the Qiskit Runtime primitives that execute workloads on IBM Quantum&trade; compute resources. These primitives provide you with the ability to efficiently define vectorized workloads by using a data structure known as a **Primitive Unified Bloc (PUB)**. These PUBs are the fundamental unit of work a QPU needs to execute these workloads. They are used as inputs to the [`run()`](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.EstimatorV2#run) method for the Sampler and Estimator primitives, which execute the defined workload as a job. Then, after the job has completed, the results are returned in a format that is dependent on both the PUBs used as well as the runtime options specified from the Sampler or Estimator primitives."
    ]
   },
