--- a/docs/guides/simulate-with-qiskit-aer.ipynb
+++ b/docs/guides/simulate-with-qiskit-aer.ipynb
@@ -5,8 +5,24 @@
    "id": "4a4b88ed-d21f-4056-9264-0ee8c8ec4b39",
    "metadata": {},
    "source": [
-    "# Exact and noisy simulation with Qiskit Aer primitives\n",
-    "\n",
+    "# Exact and noisy simulation with Qiskit Aer primitives"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "678b9055-9164-417c-9897-9fde615b97ae",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a0ae8b1-b413-44ac-9267-fd36345a02df",
+   "metadata": {},
+   "source": [
     "[Exact simulation with Qiskit primitives](./simulate-with-qiskit-sdk-primitives) demonstrates how to use the reference primitives included with Qiskit to perform exact simulation of quantum circuits. Currently existing quantum processors suffer from errors, or noise, so the results of an exact simulation do not necessarily reflect the results you would expect when running circuits on real hardware. While the reference primitives in Qiskit do not support modeling noise, [Qiskit Aer](https://qiskit.org/ecosystem/aer/) includes implementations of the primitives that do support modeling noise. Qiskit Aer is a high-performance quantum circuit simulator that you can use in place of the reference primitives for better performance and more features. It is part of the [Qiskit Ecosystem](https://qiskit.github.io/ecosystem/). In this article, we demonstrate the use of Qiskit Aer primitives for exact and noisy simulation.\n",
     "\n",
     "<Admonition type=\"note\" title=\"Notes\">\n",
