--- a/docs/guides/transpiler-plugins.ipynb
+++ b/docs/guides/transpiler-plugins.ipynb
@@ -5,8 +5,24 @@
    "id": "334fb4b3-9d8d-4ee2-ba20-b6008b13c6e5",
    "metadata": {},
    "source": [
-    "# Install and use transpiler plugins\n",
-    "\n",
+    "# Install and use transpiler plugins"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77dbb5da-59b0-4f02-8e94-f9b11ff1fda1",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f0d6d62-b48f-45e2-bef4-735f21b23526",
+   "metadata": {},
+   "source": [
     "To facilitate the development and reuse of custom transpilation code by the wider community of Qiskit users, the Qiskit SDK supports a plugin interface that enables third-party Python packages to declare that they provide extended transpilation functionality accessible via Qiskit.\n",
     "\n",
     "Currently, third-party plugins can provide extended transpilation functionality in three ways:\n",
