--- a/docs/guides/visualize-results.ipynb
+++ b/docs/guides/visualize-results.ipynb
@@ -10,6 +10,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4f548f5a-9fee-498b-b54a-92da5acb2161",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "7373f30c-a034-4abf-9dd9-71d74c8b296e",
    "metadata": {},
    "source": [
