--- a/docs/guides/operator-class.ipynb
+++ b/docs/guides/operator-class.ipynb
@@ -16,7 +16,22 @@
      "version-info"
     ]
    },
-   "source": []
+   "source": [
+    "<details>\n",
+    "<summary>Package versions</summary>\n",
+    "\n",
+    "The code on this page was developed using the following requirements.\n",
+    "We recommend using these versions or newer.\n",
+    "\n",
+    "```\n",
+    "qiskit[all]~=1.2.4\n",
+    "qiskit-aer~=0.15.1\n",
+    "qiskit-ibm-runtime~=0.31.0\n",
+    "qiskit-serverless~=0.17.1\n",
+    "qiskit-ibm-catalog~=0.1\n",
+    "```\n",
+    "</details>"
+   ]
   },
   {
    "cell_type": "markdown",
