--- a/docs/guides/simulate-with-qiskit-aer.ipynb
+++ b/docs/guides/simulate-with-qiskit-aer.ipynb
@@ -16,7 +16,22 @@
      "version-info"
     ]
    },
-   "source": []
+   "source": [
+    "<details>\n",
+    "<summary>Package versions</summary>\n",
+    "\n",
+    "The code on this page was developed using the following requirements.\n",
+    "We recommend using these versions or newer.\n",
+    "\n",
+    "```\n",
+    "qiskit[all]~=1.2.4\n",
+    "qiskit-aer~=0.15.1\n",
+    "qiskit-ibm-runtime~=0.31.0\n",
+    "qiskit-serverless~=0.17.1\n",
+    "qiskit-ibm-catalog~=0.1\n",
+    "```\n",
+    "</details>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -210,25 +225,33 @@
     {
      "data": {
       "text/plain": [
-       "{'00110000': 1,\n",
-       " '00001010': 3,\n",
-       " '00111100': 1,\n",
-       " '01100000': 1,\n",
-       " '01010000': 1,\n",
-       " '00000101': 2,\n",
-       " '11000000': 1,\n",
+       "{'00000000': 59,\n",
+       " '00110000': 3,\n",
+       " '01100000': 4,\n",
+       " '11110000': 4,\n",
+       " '10000000': 4,\n",
        " '01010100': 1,\n",
-       " '00000011': 1,\n",
-       " '01000000': 4,\n",
-       " '00000001': 1,\n",
-       " '00100000': 1,\n",
-       " '10100000': 1,\n",
-       " '00000000': 67,\n",
-       " '00011000': 2,\n",
+       " '10110100': 1,\n",
+       " '00011110': 2,\n",
        " '00001100': 2,\n",
+       " '00010001': 1,\n",
+       " '00001010': 2,\n",
+       " '00010100': 1,\n",
+       " '00000010': 1,\n",
+       " '10000110': 1,\n",
+       " '00101000': 1,\n",
+       " '00011000': 1,\n",
        " '00010000': 1,\n",
-       " '00101000': 2,\n",
-       " '10000000': 7}"
+       " '01010000': 1,\n",
+       " '01000000': 1,\n",
+       " '10100000': 2,\n",
+       " '00000011': 1,\n",
+       " '00000001': 1,\n",
+       " '11010000': 1,\n",
+       " '10010000': 1,\n",
+       " '00000110': 1,\n",
+       " '00100000': 1,\n",
+       " '00001111': 1}"
       ]
      },
      "execution_count": 5,
