add skip_reset_qubits option for dd

--- a/docs/guides/runtime-options-overview.mdx
+++ b/docs/guides/runtime-options-overview.mdx
@@ -68,6 +68,7 @@ Scroll to see the full table.
 |                      | sequence_type            |                         | `'XX'`/`'XpXm'`/`'XY4'`                                                         | `'XX'`                      |                      |
 |                      | extra_slack_distribution |                         | `'middle'`/`'edges'`                                                                  | `'middle'`                  |                      |
 |                      | scheduling_method        |                         | `'asap'`/`'alap'`                                                                      | `'alap'`                    |                      |
+|                      | skip_reset_qubits        |                         | `True`/`False`                                                                                   | `False`                 |                    |
 | [environment](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EnvironmentOptions)          |                          |     |             |                                  | environment          |
 |                      | log_level                |                         |`DEBUG`/`INFO`/`WARNING`/`ERROR`/`CRITICAL`                 |`WARNING`                          |                      |
 |                      | callback                 |                         |Callable function that receives Job ID and Job result.                             |`None`                           |                      |
@@ -116,6 +117,7 @@ Scroll to see the full table.
 |                      | sequence_type            |                         | `'XX'`/`'XpXm'`/`'XY4'`                                                                         | `'XX'`                 |                    |
 |                      | extra_slack_distribution |                         | `'middle'`/`'edges'`                                                                          | `'middle'`                  |                    |
 |                      | scheduling_method        |                         | `'asap'`/`'alap'`                                                                            | `'alap'`                    |                    |
+|                      | skip_reset_qubits        |                         | `True`/`False`                                                                                   | `False`                 |                    |
 | [environment](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EnvironmentOptions)          |                          |                         |              |                                  |                    |
 |                      | log_level                |                         |`DEBUG`/`INFO`/`WARNING`/`ERROR`/`CRITICAL`                                             |`WARNING`                          |   environment   |
 |                      | callback                 |                         |Callable function that receives Job ID and Job result.                                    |`None`                           |                    |
