--- a/docs/guides/qiskit-addons-sqd-get-started.ipynb
+++ b/docs/guides/qiskit-addons-sqd-get-started.ipynb
@@ -1660,6 +1660,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "94d3f09d-324c-4eb3-a82a-3c88b9a11752",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -1978,7 +1979,7 @@
  "metadata": {
   "description": "Get started with the SQD addon and how to post-process results",
   "kernelspec": {
-   "display_name": "qiskit_1-0_scratch_space-fyWgEqUn-py3.11",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1992,7 +1993,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3"
   },
   "title": "Getting started with SQD addon"
  },
