--- a/docs/guides/operator-class.ipynb
+++ b/docs/guides/operator-class.ipynb
@@ -18,7 +18,7 @@
    },
    "source": [
     "<details>\n",
-    "<summary>Package versions</summary>\n",
+    "<summary><b>Package versions</b></summary>\n",
     "\n",
     "The code on this page was developed using the following requirements.\n",
     "We recommend using these versions or newer.\n",
@@ -659,7 +659,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Process fidelity = 1.0\n"
+      "Process fidelity ="
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 1.0\n"
      ]
     }
    ],
