--- a/docs/guides/represent-quantum-computers.ipynb
+++ b/docs/guides/represent-quantum-computers.ipynb
@@ -18,7 +18,7 @@
    },
    "source": [
     "<details>\n",
-    "<summary>Package versions</summary>\n",
+    "<summary><b>Package versions</b></summary>\n",
     "\n",
     "The code on this page was developed using the following requirements.\n",
     "We recommend using these versions or newer.\n",
@@ -342,7 +342,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['x', 'switch_case', 'id', 'rz', 'delay', 'ecr', 'reset', 'if_else', 'for_loop', 'measure', 'sx']\n"
+      "['id', 'if_else', 'sx', 'delay', 'x', 'switch_case', 'ecr', 'rz', 'reset', 'for_loop', 'measure']\n"
      ]
     }
    ],
