--- a/docs/guides/serverless-first-program.ipynb
+++ b/docs/guides/serverless-first-program.ipynb
@@ -18,7 +18,7 @@
    },
    "source": [
     "<details>\n",
-    "<summary>Package versions</summary>\n",
+    "<summary><b>Package versions</b></summary>\n",
     "\n",
     "The code on this page was developed using the following requirements.\n",
     "We recommend using these versions or newer.\n",
@@ -316,6 +316,7 @@
        " QiskitFunction(transpile_remote_serverless_test_3e28580a),\n",
        " QiskitFunction(transpile_remote_serverless_test_7e16ef16),\n",
        " QiskitFunction(transpile_remote_serverless_test_47c755bf),\n",
+       " QiskitFunction(transpile_remote_serverless),\n",
        " QiskitFunction(transpile_remote_serverless_test_579ed35c-3f56-484c-8a64-58dc953ed845),\n",
        " QiskitFunction(transpile_remote_serverless_test_47c79b69),\n",
        " QiskitFunction(transpile_remote_serverless_test_53c0786c),\n",
@@ -330,7 +331,6 @@
        " QiskitFunction(transpile_remote_serverless_test_355478eb),\n",
        " QiskitFunction(transpile_remote_serverless_test),\n",
        " QiskitFunction(transpile_remote_serverless_test_8e84c5f0-962d-4cd0-bca8-ebe1e227552f),\n",
-       " QiskitFunction(transpile_remote_serverless),\n",
        " QiskitFunction(transpile_remote_serverless_test_4532e330),\n",
        " QiskitFunction(transpile_remote_serverless_test_7659964c),\n",
        " QiskitFunction(transpile_remote_serverless_test_5d216ee7),\n",
