--- a/docs/guides/local-testing-mode.ipynb
+++ b/docs/guides/local-testing-mode.ipynb
@@ -19,7 +19,7 @@
    },
    "source": [
     "<details>\n",
-    "<summary>Package versions</summary>\n",
+    "<summary><b>Package versions</b></summary>\n",
     "\n",
     "The code on this page was developed using the following requirements.\n",
     "We recommend using these versions or newer.\n",
