--- a/docs/guides/simulate-with-qiskit-aer.ipynb
+++ b/docs/guides/simulate-with-qiskit-aer.ipynb
@@ -18,7 +18,7 @@
    },
    "source": [
     "<details>\n",
-    "<summary>Package versions</summary>\n",
+    "<summary><b>Package versions</b></summary>\n",
     "\n",
     "The code on this page was developed using the following requirements.\n",
     "We recommend using these versions or newer.\n",
@@ -225,33 +225,28 @@
     {
      "data": {
       "text/plain": [
-       "{'00000000': 59,\n",
-       " '00110000': 3,\n",
-       " '01100000': 4,\n",
-       " '11110000': 4,\n",
-       " '10000000': 4,\n",
-       " '01010100': 1,\n",
-       " '10110100': 1,\n",
-       " '00011110': 2,\n",
-       " '00001100': 2,\n",
-       " '00010001': 1,\n",
-       " '00001010': 2,\n",
-       " '00010100': 1,\n",
-       " '00000010': 1,\n",
-       " '10000110': 1,\n",
-       " '00101000': 1,\n",
-       " '00011000': 1,\n",
-       " '00010000': 1,\n",
-       " '01010000': 1,\n",
-       " '01000000': 1,\n",
+       "{'00000000': 66,\n",
        " '10100000': 2,\n",
-       " '00000011': 1,\n",
-       " '00000001': 1,\n",
-       " '11010000': 1,\n",
-       " '10010000': 1,\n",
-       " '00000110': 1,\n",
-       " '00100000': 1,\n",
-       " '00001111': 1}"
+       " '00001111': 2,\n",
+       " '00001100': 1,\n",
+       " '01010000': 1,\n",
+       " '00101000': 3,\n",
+       " '10101000': 1,\n",
+       " '00001000': 1,\n",
+       " '10000000': 2,\n",
+       " '01000000': 3,\n",
+       " '11000100': 1,\n",
+       " '11000000': 1,\n",
+       " '00001010': 3,\n",
+       " '11111000': 1,\n",
+       " '00111100': 1,\n",
+       " '00010100': 5,\n",
+       " '00011000': 1,\n",
+       " '00000100': 1,\n",
+       " '01100000': 1,\n",
+       " '01001100': 1,\n",
+       " '10000101': 1,\n",
+       " '00110000': 1}"
       ]
      },
      "execution_count": 5,
