Format notebooks with Ruff (#2199)
Follow-up to #2197. Draft until that PR is merged, then I'll rebase
this.

Also a partial fix for #1806 depending if we want to also lint code
examples in MDX.

--- a/docs/guides/circuit-library.ipynb
+++ b/docs/guides/circuit-library.ipynb
@@ -79,13 +79,14 @@
    "source": [
     "from qiskit import QuantumCircuit\n",
     "from qiskit.circuit.library import HGate, MCXGate\n",
+    "\n",
     "mcx_gate = MCXGate(3)\n",
     "hadamard_gate = HGate()\n",
     "\n",
     "qc = QuantumCircuit(4)\n",
     "qc.append(hadamard_gate, [0])\n",
-    "qc.append(mcx_gate, [0,1,2,3])\n",
-    "qc.draw('mpl')"
+    "qc.append(mcx_gate, [0, 1, 2, 3])\n",
+    "qc.draw(\"mpl\")"
    ]
   },
   {
@@ -141,8 +142,9 @@
    ],
    "source": [
     "from qiskit.circuit.library import TwoLocal\n",
-    "two_local = TwoLocal(3, 'rx', 'cz')\n",
-    "two_local.decompose().draw('mpl')"
+    "\n",
+    "two_local = TwoLocal(3, \"rx\", \"cz\")\n",
+    "two_local.decompose().draw(\"mpl\")"
    ]
   },
   {
@@ -203,8 +205,10 @@
     }
    ],
    "source": [
-    "bound_circuit = two_local.assign_parameters({ p: 0 for p in two_local.parameters})\n",
-    "bound_circuit.decompose().draw('mpl')"
+    "bound_circuit = two_local.assign_parameters(\n",
+    "    {p: 0 for p in two_local.parameters}\n",
+    ")\n",
+    "bound_circuit.decompose().draw(\"mpl\")"
    ]
   },
   {
@@ -257,7 +261,7 @@
     "feature_map = ZZFeatureMap(feature_dimension=len(features))\n",
     "\n",
     "encoded = feature_map.assign_parameters(features)\n",
-    "encoded.draw('mpl')"
+    "encoded.draw(\"mpl\")"
    ]
   },
   {
@@ -314,7 +318,7 @@
     "# Evolve state by appending the evolution gate\n",
     "state.compose(evolution, inplace=True)\n",
     "\n",
-    "state.draw('mpl')"
+    "state.draw(\"mpl\")"
    ]
   },
   {
@@ -361,7 +365,8 @@
    ],
    "source": [
     "from qiskit.circuit.library import QuantumVolume\n",
-    "QuantumVolume(4).decompose().draw('mpl')"
+    "\n",
+    "QuantumVolume(4).decompose().draw(\"mpl\")"
    ]
   },
   {
@@ -414,25 +419,29 @@
     "adder = CDKMRippleCarryAdder(3)  # Adder of 3-bit numbers\n",
     "\n",
     "# Create the number A=2\n",
-    "reg_a = QuantumRegister(3, 'a')\n",
+    "reg_a = QuantumRegister(3, \"a\")\n",
     "number_a = QuantumCircuit(reg_a)\n",
-    "number_a.initialize(2) # Number 2; |010>\n",
+    "number_a.initialize(2)  # Number 2; |010>\n",
     "\n",
     "# Create the number B=3\n",
-    "reg_b = QuantumRegister(3, 'b')\n",
+    "reg_b = QuantumRegister(3, \"b\")\n",
     "number_b = QuantumCircuit(reg_b)\n",
     "number_b.initialize(3)  # Number 3; |011>\n",
     "\n",
     "# Create a circuit to hold everything, including a classical register for\n",
-    "# the result\n",
+    "# the result\n",
     "reg_result = ClassicalRegister(3)\n",
     "circuit = QuantumCircuit(*adder.qregs, reg_result)\n",
     "\n",
     "# Compose number initializers with the adder. Adder stores the result to\n",
     "# register B, so we'll measure those qubits.\n",
-    "circuit = circuit.compose(number_a, qubits=reg_a).compose(number_b, qubits=reg_b).compose(adder)\n",
+    "circuit = (\n",
+    "    circuit.compose(number_a, qubits=reg_a)\n",
+    "    .compose(number_b, qubits=reg_b)\n",
+    "    .compose(adder)\n",
+    ")\n",
     "circuit.measure(reg_b, reg_result)\n",
-    "circuit.draw('mpl')"
+    "circuit.draw(\"mpl\")"
    ]
   },
   {
@@ -463,7 +472,7 @@
     "\n",
     "result = StatevectorSampler().run([circuit]).result()\n",
     "\n",
-    "print(f'Count data:\\n {result[0].data.c0.get_int_counts()}')"
+    "print(f\"Count data:\\n {result[0].data.c0.get_int_counts()}\")"
    ]
   },
   {
