--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -65,7 +65,7 @@
    "source": [
     "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
-    "catalog = QiskitFunctionsCatalog(token='<YOUR_IQP_API_TOKEN>')"
+    "catalog = QiskitFunctionsCatalog(token=\"<YOUR_IQP_API_TOKEN>\")"
    ]
   },
   {
@@ -132,7 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ibm_cf = catalog.load('ibm/circuit-function')"
+    "ibm_cf = catalog.load(\"ibm/circuit-function\")"
    ]
   },
   {
@@ -158,11 +158,7 @@
     }
    ],
    "source": [
-    "job = ibm_cf.run(\n",
-    "    instance=...,\n",
-    "    pubs=[],\n",
-    "    backend=\"backend_name\"\n",
-    ")\n",
+    "job = ibm_cf.run(instance=..., pubs=[], backend=\"backend_name\")\n",
     "\n",
     "job.job_id"
    ]
