--- a/docs/guides/simulate-with-qiskit-aer.ipynb
+++ b/docs/guides/simulate-with-qiskit-aer.ipynb
@@ -158,7 +158,9 @@
     "    depolarizing_error(cx_depolarizing_prob, 2), [\"cx\"]\n",
     ")\n",
     "\n",
-    "noisy_estimator = Estimator(options=dict(backend_options=dict(noise_model=noise_model)))\n",
+    "noisy_estimator = Estimator(\n",
+    "    options=dict(backend_options=dict(noise_model=noise_model))\n",
+    ")\n",
     "job = noisy_estimator.run([pub])\n",
     "result = job.result()\n",
     "pub_result = result[0]\n",
@@ -260,7 +262,9 @@
     "measured_circuit = circuit.copy()\n",
     "measured_circuit.measure_all()\n",
     "\n",
-    "noisy_sampler = Sampler(options=dict(backend_options=dict(noise_model=noise_model)))\n",
+    "noisy_sampler = Sampler(\n",
+    "    options=dict(backend_options=dict(noise_model=noise_model))\n",
+    ")\n",
     "# The circuit needs to be transpiled to the AerSimulator target\n",
     "pass_manager = generate_preset_pass_manager(3, AerSimulator())\n",
     "isa_circuit = pass_manager.run(measured_circuit)\n",
