--- a/docs/guides/transpiler-plugins.ipynb
+++ b/docs/guides/transpiler-plugins.ipynb
@@ -176,7 +176,9 @@
     }
    ],
    "source": [
-    "from qiskit.transpiler.passes.synthesis import high_level_synthesis_plugin_names\n",
+    "from qiskit.transpiler.passes.synthesis import (\n",
+    "    high_level_synthesis_plugin_names,\n",
+    ")\n",
     "\n",
     "high_level_synthesis_plugin_names(\"clifford\")"
    ]
@@ -223,7 +225,9 @@
     }
    ],
    "source": [
-    "from qiskit.transpiler.passes.synthesis.plugin import HighLevelSynthesisPluginManager\n",
+    "from qiskit.transpiler.passes.synthesis.plugin import (\n",
+    "    HighLevelSynthesisPluginManager,\n",
+    ")\n",
     "\n",
     "HighLevelSynthesisPluginManager().plugins.names()"
    ]
@@ -282,7 +286,9 @@
     "    optimization_level=3,\n",
     "    backend=backend,\n",
     "    unitary_synthesis_method=\"sk\",\n",
-    "    unitary_synthesis_plugin_config=dict(basis_gates=[\"cz\", \"id\", \"rz\", \"sx\", \"x\"]),\n",
+    "    unitary_synthesis_plugin_config=dict(\n",
+    "        basis_gates=[\"cz\", \"id\", \"rz\", \"sx\", \"x\"]\n",
+    "    ),\n",
     ")"
    ]
   },
