--- a/docs/guides/build-noise-models.ipynb
+++ b/docs/guides/build-noise-models.ipynb
@@ -207,8 +207,8 @@
    "source": [
     "# Construct a 1-qubit bit-flip and phase-flip errors\n",
     "p_error = 0.05\n",
-    "bit_flip = pauli_error([('X', p_error), ('I', 1 - p_error)])\n",
-    "phase_flip = pauli_error([('Z', p_error), ('I', 1 - p_error)])\n",
+    "bit_flip = pauli_error([(\"X\", p_error), (\"I\", 1 - p_error)])\n",
+    "phase_flip = pauli_error([(\"Z\", p_error), (\"I\", 1 - p_error)])\n",
     "print(bit_flip)\n",
     "print(phase_flip)"
    ]
@@ -523,7 +523,7 @@
     "\n",
     "# Add depolarizing error to all single qubit u1, u2, u3 gates\n",
     "error = depolarizing_error(0.05, 1)\n",
-    "noise_model.add_all_qubit_quantum_error(error, ['u1', 'u2', 'u3'])\n",
+    "noise_model.add_all_qubit_quantum_error(error, [\"u1\", \"u2\", \"u3\"])\n",
     "\n",
     "# Print noise model info\n",
     "print(noise_model)"
@@ -571,7 +571,7 @@
     "\n",
     "# Add depolarizing error to all single qubit u1, u2, u3 gates on qubit 0 only\n",
     "error = depolarizing_error(0.05, 1)\n",
-    "noise_model.add_quantum_error(error, ['u1', 'u2', 'u3'], [0])\n",
+    "noise_model.add_quantum_error(error, [\"u1\", \"u2\", \"u3\"], [0])\n",
     "\n",
     "# Print noise model info\n",
     "print(noise_model)"
@@ -749,9 +749,9 @@
     "p_gate1 = 0.05\n",
     "\n",
     "# QuantumError objects\n",
-    "error_reset = pauli_error([('X', p_reset), ('I', 1 - p_reset)])\n",
-    "error_meas = pauli_error([('X',p_meas), ('I', 1 - p_meas)])\n",
-    "error_gate1 = pauli_error([('X',p_gate1), ('I', 1 - p_gate1)])\n",
+    "error_reset = pauli_error([(\"X\", p_reset), (\"I\", 1 - p_reset)])\n",
+    "error_meas = pauli_error([(\"X\", p_meas), (\"I\", 1 - p_meas)])\n",
+    "error_gate1 = pauli_error([(\"X\", p_gate1), (\"I\", 1 - p_gate1)])\n",
     "error_gate2 = error_gate1.tensor(error_gate1)\n",
     "\n",
     "# Add errors to noise model\n",
@@ -806,7 +806,9 @@
     "sim_noise = AerSimulator(noise_model=noise_bit_flip)\n",
     "\n",
     "# Transpile circuit for noisy basis gates\n",
-    "passmanager = generate_preset_pass_manager(optimization_level=3, backend=sim_noise)\n",
+    "passmanager = generate_preset_pass_manager(\n",
+    "    optimization_level=3, backend=sim_noise\n",
+    ")\n",
     "circ_tnoise = passmanager.run(circ)\n",
     "\n",
     "# Run and get counts\n",
@@ -856,35 +858,49 @@
    ],
    "source": [
     "# T1 and T2 values for qubits 0-3\n",
-    "T1s = np.random.normal(50e3, 10e3, 4) # Sampled from normal distribution mean 50 microsec\n",
-    "T2s = np.random.normal(70e3, 10e3, 4)  # Sampled from normal distribution mean 50 microsec\n",
+    "T1s = np.random.normal(\n",
+    "    50e3, 10e3, 4\n",
+    ")  # Sampled from normal distribution mean 50 microsec\n",
+    "T2s = np.random.normal(\n",
+    "    70e3, 10e3, 4\n",
+    ")  # Sampled from normal distribution mean 50 microsec\n",
     "\n",
     "# Truncate random T2s <= T1s\n",
     "T2s = np.array([min(T2s[j], 2 * T1s[j]) for j in range(4)])\n",
     "\n",
     "# Instruction times (in nanoseconds)\n",
-    "time_u1 = 0   # virtual gate\n",
+    "time_u1 = 0  # virtual gate\n",
     "time_u2 = 50  # (single X90 pulse)\n",
-    "time_u3 = 100 # (two X90 pulses)\n",
+    "time_u3 = 100  # (two X90 pulses)\n",
     "time_cx = 300\n",
     "time_reset = 1000  # 1 microsecond\n",
-    "time_measure = 1000 # 1 microsecond\n",
+    "time_measure = 1000  # 1 microsecond\n",
     "\n",
     "# QuantumError objects\n",
-    "errors_reset = [thermal_relaxation_error(t1, t2, time_reset)\n",
-    "                for t1, t2 in zip(T1s, T2s)]\n",
-    "errors_measure = [thermal_relaxation_error(t1, t2, time_measure)\n",
-    "                  for t1, t2 in zip(T1s, T2s)]\n",
-    "errors_u1  = [thermal_relaxation_error(t1, t2, time_u1)\n",
-    "              for t1, t2 in zip(T1s, T2s)]\n",
-    "errors_u2  = [thermal_relaxation_error(t1, t2, time_u2)\n",
-    "              for t1, t2 in zip(T1s, T2s)]\n",
-    "errors_u3  = [thermal_relaxation_error(t1, t2, time_u3)\n",
-    "              for t1, t2 in zip(T1s, T2s)]\n",
-    "errors_cx = [[thermal_relaxation_error(t1a, t2a, time_cx).expand(\n",
-    "             thermal_relaxation_error(t1b, t2b, time_cx))\n",
-    "              for t1a, t2a in zip(T1s, T2s)]\n",
-    "               for t1b, t2b in zip(T1s, T2s)]\n",
+    "errors_reset = [\n",
+    "    thermal_relaxation_error(t1, t2, time_reset) for t1, t2 in zip(T1s, T2s)\n",
+    "]\n",
+    "errors_measure = [\n",
+    "    thermal_relaxation_error(t1, t2, time_measure) for t1, t2 in zip(T1s, T2s)\n",
+    "]\n",
+    "errors_u1 = [\n",
+    "    thermal_relaxation_error(t1, t2, time_u1) for t1, t2 in zip(T1s, T2s)\n",
+    "]\n",
+    "errors_u2 = [\n",
+    "    thermal_relaxation_error(t1, t2, time_u2) for t1, t2 in zip(T1s, T2s)\n",
+    "]\n",
+    "errors_u3 = [\n",
+    "    thermal_relaxation_error(t1, t2, time_u3) for t1, t2 in zip(T1s, T2s)\n",
+    "]\n",
+    "errors_cx = [\n",
+    "    [\n",
+    "        thermal_relaxation_error(t1a, t2a, time_cx).expand(\n",
+    "            thermal_relaxation_error(t1b, t2b, time_cx)\n",
+    "        )\n",
+    "        for t1a, t2a in zip(T1s, T2s)\n",
+    "    ]\n",
+    "    for t1b, t2b in zip(T1s, T2s)\n",
+    "]\n",
     "\n",
     "# Add errors to noise model\n",
     "noise_thermal = NoiseModel()\n",
@@ -939,7 +955,9 @@
     "sim_thermal = AerSimulator(noise_model=noise_thermal)\n",
     "\n",
     "# Transpile circuit for noisy basis gates\n",
-    "passmanager = generate_preset_pass_manager(optimization_level=3, backend=sim_thermal)\n",
+    "passmanager = generate_preset_pass_manager(\n",
+    "    optimization_level=3, backend=sim_thermal\n",
+    ")\n",
     "circ_tthermal = passmanager.run(circ)\n",
     "\n",
     "# Run and get counts\n",
