--- a/docs/guides/construct-circuits.ipynb
+++ b/docs/guides/construct-circuits.ipynb
@@ -220,7 +220,7 @@
     "qc = QuantumCircuit(1)\n",
     "qc.append(\n",
     "    HGate(),  # New HGate instruction\n",
-    "    [0]       # Apply to qubit 0\n",
+    "    [0],  # Apply to qubit 0\n",
     ")\n",
     "qc.draw(\"mpl\")"
    ]
@@ -265,7 +265,7 @@
     "qc_b.y(0)\n",
     "qc_b.z(1)\n",
     "\n",
-    "# compose qubits (0, 1) of qc_a to qubits (1, 3) of qc_b respectively\n",
+    "# compose qubits (0, 1) of qc_a to qubits (1, 3) of qc_b respectively\n",
     "combined = qc_a.compose(qc_b, qubits=[1, 3])\n",
     "combined.draw(\"mpl\")"
    ]
@@ -410,10 +410,12 @@
     "\n",
     "angle = Parameter(\"angle\")  # undefined number\n",
     "\n",
-    "# Create and optimize circuit once\n",
+    "# Create and optimize circuit once\n",
     "qc = QuantumCircuit(1)\n",
     "qc.rx(angle, 0)\n",
-    "qc = generate_preset_pass_manager(optimization_level=3, basis_gates=['u', 'cx']).run(qc)\n",
+    "qc = generate_preset_pass_manager(\n",
+    "    optimization_level=3, basis_gates=[\"u\", \"cx\"]\n",
+    ").run(qc)\n",
     "\n",
     "qc.draw(\"mpl\")"
    ]
@@ -449,9 +451,7 @@
    "source": [
     "circuits = []\n",
     "for value in range(100):\n",
-    "    circuits.append(\n",
-    "        qc.assign_parameters({ angle: value })\n",
-    "    )\n",
+    "    circuits.append(qc.assign_parameters({angle: value}))\n",
     "\n",
     "circuits[0].draw(\"mpl\")"
    ]
