--- a/docs/guides/create-transpiler-plugin.ipynb
+++ b/docs/guides/create-transpiler-plugin.ipynb
@@ -96,7 +96,9 @@
     "from qiskit.transpiler.passes import VF2Layout\n",
     "from qiskit.transpiler.passmanager_config import PassManagerConfig\n",
     "from qiskit.transpiler.preset_passmanagers import common\n",
-    "from qiskit.transpiler.preset_passmanagers.plugin import PassManagerStagePlugin\n",
+    "from qiskit.transpiler.preset_passmanagers.plugin import (\n",
+    "    PassManagerStagePlugin,\n",
+    ")\n",
     "\n",
     "\n",
     "class MyLayoutPlugin(PassManagerStagePlugin):\n",
@@ -115,7 +117,9 @@
     "                )\n",
     "            ]\n",
     "        )\n",
-    "        layout_pm += common.generate_embed_passmanager(pass_manager_config.coupling_map)\n",
+    "        layout_pm += common.generate_embed_passmanager(\n",
+    "            pass_manager_config.coupling_map\n",
+    "        )\n",
     "        return layout_pm"
    ]
   },
@@ -209,7 +213,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qiskit.transpiler.preset_passmanagers.plugin import PassManagerStagePluginManager\n",
+    "from qiskit.transpiler.preset_passmanagers.plugin import (\n",
+    "    PassManagerStagePluginManager,\n",
+    ")\n",
     "\n",
     "# Initialize the plugin manager\n",
     "plugin_manager = PassManagerStagePluginManager()\n",
@@ -467,7 +473,12 @@
     "\n",
     "class MyCliffordSynthesisPlugin(HighLevelSynthesisPlugin):\n",
     "    def run(\n",
-    "        self, high_level_object, coupling_map=None, target=None, qubits=None, **options\n",
+    "        self,\n",
+    "        high_level_object,\n",
+    "        coupling_map=None,\n",
+    "        target=None,\n",
+    "        qubits=None,\n",
+    "        **options,\n",
     "    ) -> QuantumCircuit:\n",
     "        if high_level_object.num_qubits <= 3:\n",
     "            return synth_clifford_bm(high_level_object)\n",
@@ -544,7 +555,9 @@
     }
    ],
    "source": [
-    "from qiskit.transpiler.passes.synthesis import high_level_synthesis_plugin_names\n",
+    "from qiskit.transpiler.passes.synthesis import (\n",
+    "    high_level_synthesis_plugin_names,\n",
+    ")\n",
     "\n",
     "high_level_synthesis_plugin_names(\"clifford\")"
    ]
