--- a/docs/guides/dynamical-decoupling-pass-manager.ipynb
+++ b/docs/guides/dynamical-decoupling-pass-manager.ipynb
@@ -173,7 +173,9 @@
     "import numpy as np\n",
     "\n",
     "rng = np.random.default_rng(1234)\n",
-    "qc_t.assign_parameters(rng.uniform(-np.pi, np.pi, qc_t.num_parameters), inplace=True)"
+    "qc_t.assign_parameters(\n",
+    "    rng.uniform(-np.pi, np.pi, qc_t.num_parameters), inplace=True\n",
+    ")"
    ]
   },
   {
@@ -269,7 +271,9 @@
     }
    ],
    "source": [
-    "from qiskit.circuit.equivalence_library import SessionEquivalenceLibrary as sel\n",
+    "from qiskit.circuit.equivalence_library import (\n",
+    "    SessionEquivalenceLibrary as sel,\n",
+    ")\n",
     "from qiskit.transpiler.passes import BasisTranslator\n",
     "\n",
     "qc_dd = BasisTranslator(sel, basis_gates)(qc_dd)\n",
