--- a/docs/guides/get-started-with-primitives.ipynb
+++ b/docs/guides/get-started-with-primitives.ipynb
@@ -49,7 +49,9 @@
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
     "service = QiskitRuntimeService()\n",
-    "backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)\n",
+    "backend = service.least_busy(\n",
+    "    operational=True, simulator=False, min_num_qubits=127\n",
+    ")\n",
     "\n",
     "print(backend.name)"
    ]
@@ -99,7 +101,7 @@
     "entanglement = [tuple(edge) for edge in backend.coupling_map.get_edges()]\n",
     "observable = SparsePauliOp.from_sparse_list(\n",
     "    [(\"ZZ\", [i, j], 0.5) for i, j in entanglement],\n",
-    "    num_qubits=backend.num_qubits\n",
+    "    num_qubits=backend.num_qubits,\n",
     ")\n",
     "circuit = QAOAAnsatz(observable, reps=2)\n",
     "# the circuit is parametrized, so we will define the parameter values for execution\n",
@@ -240,7 +242,9 @@
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
     "service = QiskitRuntimeService()\n",
-    "backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)"
+    "backend = service.least_busy(\n",
+    "    operational=True, simulator=False, min_num_qubits=127\n",
+    ")"
    ]
   },
   {
@@ -263,7 +267,7 @@
     "import numpy as np\n",
     "from qiskit.circuit.library import EfficientSU2\n",
     "\n",
-    "circuit = EfficientSU2(127, entanglement='linear', flatten=True)\n",
+    "circuit = EfficientSU2(127, entanglement=\"linear\", flatten=True)\n",
     "circuit.measure_all()\n",
     "# The circuit is parametrized, so we will define the parameter values for execution\n",
     "param_values = np.random.rand(circuit.num_parameters)"
@@ -371,7 +375,9 @@
     "\n",
     "# Get results for the first (and only) PUB\n",
     "pub_result = result[0]\n",
-    "print(f\"Counts for the 'meas' output register: {pub_result.data.meas.get_counts()}\")"
+    "print(\n",
+    "    f\"Counts for the 'meas' output register: {pub_result.data.meas.get_counts()}\"\n",
+    ")"
    ]
   },
   {
