--- a/docs/guides/save-circuits.ipynb
+++ b/docs/guides/save-circuits.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "qc = QuantumCircuit(2)\n",
     "qc.h(0)\n",
-    "qc.cx(0,1)\n",
+    "qc.cx(0, 1)\n",
     "qc.measure_all()"
    ]
   },
@@ -75,7 +75,7 @@
    "source": [
     "from qiskit import qpy\n",
     "\n",
-    "with open('test.qpy', 'wb') as file:\n",
+    "with open(\"test.qpy\", \"wb\") as file:\n",
     "    qpy.dump(qc, file)"
    ]
   },
@@ -108,10 +108,10 @@
     }
    ],
    "source": [
-    "with open('test.qpy', 'rb') as handle:\n",
+    "with open(\"test.qpy\", \"rb\") as handle:\n",
     "    qc = qpy.load(handle)\n",
     "\n",
-    "qc[0].draw('mpl')"
+    "qc[0].draw(\"mpl\")"
    ]
   },
   {
@@ -127,7 +127,8 @@
    "source": [
     "# Cleanup the file we created (this cell should be hidden from the user)\n",
     "import pathlib\n",
-    "pathlib.Path('test.qpy').unlink()"
+    "\n",
+    "pathlib.Path(\"test.qpy\").unlink()"
    ]
   }
  ],
