--- a/docs/guides/serverless-first-program.ipynb
+++ b/docs/guides/serverless-first-program.ipynb
@@ -70,7 +70,8 @@
    "source": [
     "# This cell is hidden from users, it just creates a new folder\n",
     "from pathlib import Path\n",
-    "Path('./source_files').mkdir(exist_ok=True)"
+    "\n",
+    "Path(\"./source_files\").mkdir(exist_ok=True)"
    ]
   },
   {
@@ -393,6 +394,7 @@
    "source": [
     "# This cell is hidden from users, it just deletes the working folder we created\n",
     "import shutil\n",
+    "\n",
     "shutil.rmtree(\"./source_files/\")"
    ]
   }
