Add metadata to guides page

--- a/docs/guides/qiskit-addons-obp.mdx
+++ b/docs/guides/qiskit-addons-obp.mdx
@@ -1,3 +1,8 @@
+---
+title: Operator backpropagation (OBP)
+description: Learn about the operator backpropagation addon to reduce quantum resource overhead
+---
+
 # Operator backpropagation (OBP)
 
 Operator backpropagation (OBP) is a technique to reduce circuit depth by trimming operations from its end at the cost of more operator measurements. There are a number of ways in which operator backpropagation can be performed, and this package uses a method based on Clifford perturbation theory.
