--- a/docs/guides/debug-qiskit-runtime-jobs.ipynb
+++ b/docs/guides/debug-qiskit-runtime-jobs.ipynb
@@ -152,14 +152,14 @@
     }
    ],
    "source": [
-    "# We initialize our observables\n",
+    "# Initialize the observables\n",
     "obs = [\"ZIIIII\", \"IZIIII\", \"IIZIII\", \"IIIZII\", \"IIIIZI\", \"IIIIIZ\"]\n",
     "print(f\"Observables: {obs}\")\n",
     "\n",
-    "# We map them to the backend's layout\n",
+    "# Map the observables to the backend's layout\n",
     "isa_obs = [SparsePauliOp(o).apply_layout(isa_qc.layout) for o in obs]\n",
     "\n",
-    "# We initialize our PUBs, which consist of six-qubit circuits with `n_layers` 1, ..., 6\n",
+    "# Initialize the PUBs, which consist of six-qubit circuits with `n_layers` 1, ..., 6\n",
     "pubs = [(generate_circuit(6, n_layers), isa_obs) for n_layers in range(1, 6)]"
    ]
   },
@@ -487,7 +487,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Can we tell them which is best for this example?*"
+    "The result with the smallest difference would help us decide which options to choose."
    ]
   }
  ],
